add home navigation
